<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GGW SysBar</string>
    <string name="loading">Loading…</string>
    <string name="grant_overlay">1. Grant \"display over other apps\"</string>
    <string name="start_bar">2. Start top bar</string>
    <string name="stop_bar">Stop top bar</string>
    <string name="need_overlay">Grant the overlay permission first.</string>
</resources>
